<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Symptom Management</string>
    <string name="title_activity_main">Symptom Management</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!-- doctor menu items-->
    <string name="patient_list">Patients List</string>
    <string name="patient_report">Patient Reports</string>
    <string name="logout">Logout</string>

    <!-- patient menu items-->
    <string name="check_in">Check-In</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_settings">Reminder Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server">Server IP or Hostname</string>
    <string name="localhost" translatable="false">https://192.168.56.1:8443</string>

    <!-- Reminder translations-->
    <string name="reminder_ticker_text">Symptom Management: Your check-in at %s o\'clock is required!</string>
    <string name="reminder_notification_title">Symptom Management</string>
    <string name="reminder_notification_text">%s: Your check-in is required</string>
    <string name="next_reminder_tomorrow">Next reminder for %s o\'clock starts tomorrow.</string>
    <string name="next_reminder_today">Next reminder for %s o\'clock starts today.</string>

    <!-- Others -->
    <string name="enter_date_and_time">Please enter date and Time:</string>

    <!-- Check-In -->
    <string name="check_in_title">Check-In [%1$s - %2$s]</string>
    <string name="check_in_not_possible">You do neither have severe symptoms nor taken your medications. There is no need for a check-in and your doctor\'s attendance.</string>

    <!-- Check-In Symptom-->
    <string name="finish_check_in">Finish Check-In</string>

    <string name="check_in_symptom1_tab_title">Sore Throat/Mouth Pain</string>
    <string name="check_in_symptom1_title">How bad is your mouth pain and sore throat?</string>
    <string name="check_in_symptom1_value1">Well-Controlled</string>
    <string name="check_in_symptom1_value2">Moderate</string>
    <string name="check_in_symptom1_value3">Severe</string>

    <string name="check_in_symptom2_tab_title">Eat/Drink</string>
    <string name="check_in_symptom2_title">Does your pain stop you from eating or drinking?</string>
    <string name="check_in_symptom2_value1">No</string>
    <string name="check_in_symptom2_value2">Some</string>
    <string name="check_in_symptom2_value3">I can\'t eat</string>

    <!-- Check-In Medication -->
    <string name="check_in_medication_tab_title">Sore Throat and Mouth Pain</string>
    <string name="check_in_medication_title">Did you take your %s?</string>
    <string name="check_in_medication_value1">Yes</string>
    <string name="check_in_medication_value2">No</string>
    <string name="check_in_create_symptom_sore_throat">Check-In: %1$s sore throat at %2$s</string>
    <string name="check_in_create_symptom_eat_drink">Check-In: Stop from eat/drink - %1$s at %2$s</string>
    <string name="check_in_create_medication">Check-In: %1$s at %2$s</string>

    <!-- menus-->
    <string name="menu_search">Search</string>

    <!-- Patients List-->
    <!-- Used for the AlphabetIndexer in PatientsListFragment to provide quick navigation by
         alphabet using ListView fast scroll. -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="no_patients_data">No patients data...</string>
    <string name="no_medications_data">No medications data...</string>
    <!-- When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
         -->
    <string name="search_match_other">Matches Other Field</string>

    <!-- Doctor fragment with tabs Medication, Patient Report and Alarms-->
    <string name="doctor_title">Patient: %s</string>

    <!-- Doctor > Medication -->
    <string name="doctor_medications_tab_title">Medications</string>
    <string name="doctor_medications_all_added">The patient is using all kinds of drugs already. There are no other medicaments you can use.</string>
    <string name="select_medicament">Select Medicament</string>
    <string name="confirm_delete_medications">Delete medications?</string>

    <!-- Doctor > Patient Report -->
    <string name="doctor_patient_report_tab_title">Patient Reports</string>
    <string name="sore_throat_mouth_pain">Sore Throat/Mouth Pain</string>
    <string name="eat_drink">Eat/Drink</string>

    <!-- Doctor > Alarms -->
    <string name="doctor_alarms_sore_throat_mouth_pain_title">%1$s Alarm [%2$s - %3$s]</string>
    <string name="doctor_alarms_sore_throat_mouth_pain">Patient %1$s has %2$s mouth pain/sore throat!</string>
    <string name="doctor_alarms_eat_drink_title">Alarm [%1$s - %2$s]: Eat/Drink</string>
    <string name="doctor_alarms_eat_drink">Patient %1$s can not eat!</string>

</resources>
