<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_check_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SymptomBaseTheme">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height_large"
        android:height="@dimen/row_height_large"
        android:text="@string/check_in_symptom2_title"
        android:textSize="@dimen/text_size_large"
        android:gravity="left|center_vertical"/>

    <RadioGroup
        android:id="@+id/selectionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/choice1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height_large"
            android:text="@string/check_in_symptom2_value1"
            android:textSize="@dimen/text_size_large"/>

        <RadioButton
            android:id="@+id/choice2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height_large"
            android:text="@string/check_in_symptom2_value2"
            android:textSize="@dimen/text_size_large"/>

        <RadioButton
            android:id="@+id/choice3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height_large"
            android:text="@string/check_in_symptom2_value3"
            android:textSize="@dimen/text_size_large"/>
    </RadioGroup>

    <TextView
        android:id="@+id/date_time_title"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height_large"
        android:layout_below="@+id/selectionList"
        android:height="@dimen/row_height_large"
        android:text="@string/enter_date_and_time"
        android:textSize="@dimen/text_size_large"
        android:gravity="left|center_vertical"/>

    <TextView
        android:id="@+id/date"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height_large"
        android:layout_below="@+id/date_time_title"
        android:drawableLeft="@drawable/perm_group_calendar"
        android:text="31.01.2014"
        android:textSize="@dimen/text_size_large"
        android:gravity="left|center_vertical"/>

    <TextView
        android:id="@+id/time"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height_large"
        android:layout_below="@+id/date"
        android:drawableLeft="@drawable/ic_dialog_time"
        android:text="14:59"
        android:textSize="@dimen/text_size_large"
        android:gravity="left|center_vertical"/>

</RelativeLayout>