<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SymptomBaseTheme">

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_height_large"
        android:drawableLeft="@drawable/ic_action_search"
        android:fontFamily="sans-serif-light"
        android:gravity="left|center_vertical"
        style="@style/searchTextHighlight"/>

    <!-- wrap buttons on the bottom in relative layout with layout_alignParentBottom="true"-->
    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="?android:attr/listPreferredItemHeight">
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_large"
            android:height="@dimen/row_height_large"
            android:drawableTop="@drawable/ic_action_new"
            android:text="@string/add"
            android:textSize="@dimen/text_size_small"
            android:gravity="center"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_large"
            android:layout_toRightOf="@+id/add"
            android:height="@dimen/row_height_large"
            android:drawableTop="@drawable/ic_action_remove"
            android:text="@string/delete"
            android:textSize="@dimen/text_size_small"
            android:gravity="center"/>
    </RelativeLayout>

    <ListView android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchText"
        android:layout_above="@+id/buttons"
        style="@style/MedicationsListView"/>

    <TextView android:id="@id/android:empty"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_medications_data"
        android:fontFamily="sans-serif-light"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/searchText"
        />

</RelativeLayout>